modules/015-admission-policy-engine/charts/constraint-templates/templates/security/allowed-cluster-roles.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8allowedclusterroles
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: security-policy
  annotations:
    metadata.gatekeeper.sh/title: "Allowed cluster roles"
    metadata.gatekeeper.sh/version: 1.1.0
    description: >-
      Controls what cluster roles are allowed to be bind to users.
spec:
  crd:
    spec:
      names:
        kind: D8AllowedClusterRoles
      validation:
        openAPIV3Schema:
          type: object
          description: >-
            Controls what cluster roles are allowed to be bind to users.
          properties:
            allowedClusterRoles:
              type: array
              description: "A list of allowed cluster roles to bind to users."
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.match" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.exception.spe" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.check_set" . | nindent 16 }}
            rego: |
              package d8.security_policies

              import data.lib.check_set.check_value_in_set_with_wildcards

              violation contains {"msg": msg, "details": {}} if {
                not input.review.operation == "DELETE"
                input.review.object.kind == "RoleBinding"
                input.review.object.roleRef.kind == "ClusterRole"

                allowedRoles := get_allowed_roles(input)
                roleRefName := input.review.object.roleRef.name
                result := check_value_in_set_with_wildcards(roleRefName, allowedRoles, [], {})
                not result.allowed

                msg := sprintf("ClusterRole \"%v\" is not in list of allowed roles %v", [roleRefName, allowedRoles])
              }

              get_allowed_roles(arg) := out if {
                not arg.parameters
                out = []
              }
              get_allowed_roles(arg) := out if {
                not arg.parameters.allowedClusterRoles
                out = []
              }
              get_allowed_roles(arg) := out if {
                out = arg.parameters.allowedClusterRoles
              }
