modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-cluster-roles/constraint-allowed-admin.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowedClusterRoles
metadata:
  name: test
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["RoleBinding"]
    scope: Namespaced
  parameters:
    allowedClusterRoles:
    - admin
  gatorVerifyCmd:
    command: [gatorPath, "verify", "-v", "../charts/constraint-templates/tests/"]
    args:
      - gatorPath
      - verify
      - -v
      - ../charts/constraint-templates/tests/
