modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-cluster-roles/samples/allowed2.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: superUser
  namespace: testns
subjects:
- kind: User
  name: dave
  apiGroup: rbac.authorization.k8s.io
roleRef:
  kind: Role
  name: SuperUser
  apiGroup: rbac.authorization.k8s.io
