modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-cluster-roles/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-cluster-roles
tests:
  - name: security-policy
    template: ../../templates/security/allowed-cluster-roles.yaml
    constraint: constraint-allowed-admin.yaml
    cases:
      - name: allowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/allowed.yaml
        assertions:
          - violations: no
      - name: allowed2
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/allowed2.yaml
        assertions:
          - violations: no
      - name: disallowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed.yaml
        assertions:
          - violations: yes
